Camino only - Bug 361092: Remember pages that are in the progress of being restored when quitting. r=smurph sr=pink